--- a/config.json
+++ b/config.json
@@ -1,3 +1,5 @@
 {
-  "Token": "MTE1NDMyMDI4Nzg2OTk2ODQ0Ng.GWP5Fe.ZI1mMkAvxkN0MxKhbYutdaa0KQWHUGDUFuvQeQ"
+  "Token": "MTE1NDMyMDI4Nzg2OTk2ODQ0Ng.GWP5Fe.ZI1mMkAvxkN0MxKhbYutdaa0KQWHUGDUFuvQeQ",
+  "X-API-Key": "66dfbc1e62bc4016a36e239dd96550dc",
+  "Group_Name": "¾îµô ³»³öµµ Á»"
 }
