1) 개발 일자 : 2023.10.26 2) 개발 장소 : 회사 3) 개발 내용 - SlashCommend) Destiny2 기준 일자 이상 미접속 유저 목록 전송 기능 구현

--- a/DearBot.csproj
+++ b/DearBot.csproj
@@ -24,6 +24,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Destiny\Destiny.csproj" />
+    <ProjectReference Include="..\GroupsV2\GroupsV2.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
